--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=EncurtaLinks
+spring.datasource.url=jdbc:postgresql://localhost:5432/EncurtaLinks
+spring.datasource.username=postgres
+spring.datasource.password=postgresenha
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
